--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "dependencies": {
     "body-parser": "1.18.3",
     "express": "4.16.3",
+    "express-opentracing": "^0.1.1",
+    "jaeger-client": "3.11.0",
+    "minimist": "1.2.0",
     "mjml": "4.1.0",
     "multer": "1.3.1"
   }
