--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     command:
     - node
     - index.js
-    - -jaegerServiceName
-    - mjml-api
+    - -tracingName
+    - mjml
     labels:
       traefik.frontend.passHostHeader: 'true'
       traefik.frontend.rule: 'Host: mjml.vibioh.fr'
