--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "1.18.3",
+    "bunyan": "1.8.12",
     "express": "4.16.3",
     "express-opentracing": "0.1.1",
     "jaeger-client": "3.11.0",
     "mjml": "4.1.0",
-    "yargs": "^12.0.1"
+    "yargs": "12.0.1"
   }
 }
