Excluding given paths from tracing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,3 +30,8 @@ services:
     mem_limit: 134217728
     security_opt:
     - no-new-privileges
+
+networks:
+  default:
+    external:
+      name: traefik
