--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "mjml-api",
   "version": "1.0.0",
   "description": "MJML API Conversion",
-  "main": "index.js",
+  "repository": "https://github.com/ViBiOh/mjml-api",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "./index.js"
+    "build": "./node_modules/.bin/babel src --out-dir dist",
+    "start": "./node_modules/.bin/babel-node src/index.js"
   },
   "keywords": [
     "mjml",
@@ -20,5 +22,9 @@
     "jaeger-client": "3.11.0",
     "mjml": "4.1.0",
     "yargs": "12.0.1"
+  },
+  "devDependencies": {
+    "babel-cli": "6.26.0",
+    "babel-preset-env": "1.7.0"
   }
 }
