--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "repository": "https://github.com/ViBiOh/mjml-api",
   "main": "dist/index.js",
   "scripts": {
+    "postinstall": "ln -f -s pre-commit .git/hooks/pre-commit",
+    "format": "./node_modules/.bin/prettier --write src/*.js",
+    "lint": "./node_modules/.bin/eslint --fix src/",
+    "prebuild": "npm run format && npm run lint",
     "build": "./node_modules/.bin/babel src --out-dir dist",
     "start": "./node_modules/.bin/babel-node src/index.js"
   },
@@ -25,6 +29,26 @@
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
-    "babel-preset-env": "1.7.0"
+    "babel-preset-env": "1.7.0",
+    "eslint": "5.1.0",
+    "eslint-config-airbnb-base": "13.0.0",
+    "eslint-config-prettier": "2.9.0",
+    "eslint-plugin-import": "2.13.0",
+    "prettier": "1.13.7"
+  },
+  "babel": {
+    "presets": [
+      "env"
+    ]
+  },
+  "eslintConfig": {
+    "extends": [
+      "airbnb-base",
+      "prettier"
+    ]
+  },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "all"
   }
 }
