--- a/.travis.yml
+++ b/.travis.yml
@@ -2,19 +2,28 @@ jobs:
   include:
   - stage: Build
 
-    language: node_js
     sudo: required
     services:
     - docker
-    node_js: 10
-    script: make
+    script: make docker
+    after_success: |
+      echo ${DOCKER_PASS} | docker login -u vibioh --password-stdin && \
+      docker push vibioh/mjml-api:`make version`
+
+  - stage: Publish
+
+    sudo: required
+    services:
+    - docker
+    script: |
+      echo ${DOCKER_PASS} | docker login -u vibioh --password-stdin
+      docker pull vibioh/mjml-api:`make version`
+      docker tag vibioh/mjml-api:`make version` vibioh/mjml-api:latest
+      docker push vibioh/mjml-api:latest
 
   - stage: Deploy
 
     script: |
-      make docker-promote
-      VERSION=latest make docker-push
-
       sed \
         -e "s|\${HTTP_PASSWORD}|${HTTP_PASSWORD}|g" \
         -e "s|\${ROLLBAR_TOKEN}|${ROLLBAR_TOKEN}|g" \
@@ -26,7 +35,8 @@ jobs:
 
 stages:
   - Build
-  - Test
+  - name: Publish
+    if: branch = master
   - name: Deploy
     if: branch = master
 
