--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       traefik.frontend.rule: 'Host: mjml.vibioh.fr'
       traefik.protocol: 'http'
       traefik.port: '3000'
-      traefik.frontend.auth.basic: ${HTTP_PASSWORD}
+      traefik.frontend.auth.basic.users: ${HTTP_PASSWORD}
       traefik.frontend.rateLimit.extractorFunc: 'client.ip'
       traefik.frontend.rateLimit.rateSet.first.period: '60s'
       traefik.frontend.rateLimit.rateSet.first.average: '100'
