--- a/package.json
+++ b/package.json
@@ -20,21 +20,22 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "1.18.3",
-    "express": "4.16.3",
+    "express": "4.16.4",
     "express-opentracing": "0.1.1",
-    "jaeger-client": "3.11.0",
-    "mjml": "4.1.0",
-    "rollbar": "2.4.4",
-    "yargs": "12.0.1"
+    "jaeger-client": "3.13.0",
+    "mjml": "4.2.0",
+    "prom-client": "11.1.3",
+    "rollbar": "2.5.0",
+    "yargs": "12.0.2"
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
     "babel-preset-env": "1.7.0",
-    "eslint": "5.1.0",
-    "eslint-config-airbnb-base": "13.0.0",
-    "eslint-config-prettier": "2.9.0",
-    "eslint-plugin-import": "2.13.0",
-    "prettier": "1.13.7"
+    "eslint": "5.8.0",
+    "eslint-config-airbnb-base": "13.1.0",
+    "eslint-config-prettier": "3.1.0",
+    "eslint-plugin-import": "2.14.0",
+    "prettier": "1.14.3"
   },
   "babel": {
     "presets": [
