--- a/package.json
+++ b/package.json
@@ -23,17 +23,17 @@
     "express": "4.16.4",
     "express-opentracing": "0.1.1",
     "jaeger-client": "3.14.4",
-    "mjml": "4.3.1",
-    "yargs": "12.0.5"
+    "mjml": "4.4.0-beta.1",
+    "yargs": "13.2.1"
   },
   "devDependencies": {
     "@babel/cli": "7.2.3",
-    "@babel/core": "7.2.2",
+    "@babel/core": "7.3.3",
     "@babel/node": "7.2.2",
     "@babel/preset-env": "7.3.1",
     "@babel/register": "7.0.0",
     "babel-eslint": "10.0.1",
-    "eslint": "5.13.0",
+    "eslint": "5.14.1",
     "eslint-config-airbnb-base": "13.1.0",
     "eslint-config-prettier": "4.0.0",
     "eslint-plugin-import": "2.16.0",
