CHanging deploy method

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2.1'
 
 services:
   api:
-    image: vibioh/mjml-api
+    image: vibioh/mjml
     command:
     - --tracingName
     - mjml
