--- a/.travis.yml
+++ b/.travis.yml
@@ -26,11 +26,12 @@ jobs:
     script: |
       sed \
         -e "s|\${HTTP_PASSWORD}|${HTTP_PASSWORD}|g" \
+        -e "s|\\\$|\$\$|g" \
         docker-compose.yml > docker-compose-env.yml
     deploy:
     - provider: script
       skip_cleanup: true
-      script: 'curl -H "Authorization: GitHub ${GITHUB_OAUTH_TOKEN}" -X POST "https://dashboard-api.vibioh.fr/deploy/mjml/" --data-binary @docker-compose-env.yml'
+      script: 'curl -X POST -u "${DEPLOY_CREDENTIALS}" "https://deploy.vibioh.fr/?project=$(make name)&version=$(make version)" --data-binary @docker-compose-env.yml'
 
 stages:
   - Build
