--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ jobs:
     script: docker build -t vibioh/$(make name):$(make version) .
     after_success: |
       echo ${DOCKER_PASS} | docker login -u vibioh --password-stdin && \
-      docker push vibioh/mjml-api:$(make version)
+      docker push vibioh/$(make name):$(make version)
 
   - stage: Publish
 
@@ -17,9 +17,9 @@ jobs:
     - docker
     script: |
       echo ${DOCKER_PASS} | docker login -u vibioh --password-stdin
-      docker pull vibioh/mjml-api:$(make version)
-      docker tag vibioh/mjml-api:$(make version) vibioh/mjml-api:latest
-      docker push vibioh/mjml-api:latest
+      docker pull vibioh/$(make name):$(make version)
+      docker tag vibioh/$(make name):$(make version) vibioh/$(make name):latest
+      docker push vibioh/$(make name):latest
 
   - stage: Deploy
 
