--- a/.travis.yml
+++ b/.travis.yml
@@ -5,21 +5,21 @@ jobs:
     sudo: required
     services:
     - docker
-    script: docker build -t vibioh/$(make name):$(make version) .
-    after_success: |
-      echo ${DOCKER_PASS} | docker login -u vibioh --password-stdin && \
-      docker push vibioh/$(make name):$(make version)
+    script: docker build --build-arg CODECOV_TOKEN --build-arg "APP_VERSION=$(make version)" -t vibioh/$(make name):$(make version) .
+    after_success:
+    - echo ${DOCKER_PASS} | docker login -u vibioh --password-stdin && \
+    - docker push vibioh/$(make name):$(make version)
 
   - stage: Publish
 
     sudo: required
     services:
     - docker
-    script: |
-      echo ${DOCKER_PASS} | docker login -u vibioh --password-stdin
-      docker pull vibioh/$(make name):$(make version)
-      docker tag vibioh/$(make name):$(make version) vibioh/$(make name):latest
-      docker push vibioh/$(make name):latest
+    script:
+    - echo ${DOCKER_PASS} | docker login -u vibioh --password-stdin
+    - docker pull vibioh/$(make name):$(make version)
+    - docker tag vibioh/$(make name):$(make version) vibioh/$(make name):latest
+    - docker push vibioh/$(make name):latest
 
   - stage: Deploy
 
@@ -31,7 +31,7 @@ jobs:
     deploy:
     - provider: script
       skip_cleanup: true
-      script: bash script/deploy "https://deploy.vibioh.fr/$(make name)/$(make version)" "@docker-compose-env.yml"
+      script: bash script/deploy "$(make name)" "$(make version)" "@docker-compose-env.yml"
 
 stages:
   - Build
