--- a/.travis.yml
+++ b/.travis.yml
@@ -36,9 +36,9 @@ jobs:
 stages:
   - Build
   - name: Publish
-    if: branch = master
+    if: branch = master && type = push
   - name: Deploy
-    if: branch = master
+    if: branch = master && type = push
 
 notifications:
   email: false
