--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,10 +11,11 @@ services:
       traefik.http.routers.mjml-https.entrypoints: https
       traefik.http.routers.mjml-https.middlewares: compress@file, web-limit@file, mjml-auth
       traefik.http.routers.mjml-https.tls: true
-      traefik.http.routers.mjml-https.tls.certResolver: default
+      traefik.http.routers.mjml-https.tls.certresolver: default
       traefik.http.services.mjml-service.loadbalancer.passhostheader: true
       traefik.http.services.mjml-service.loadbalancer.server.port: '1080'
-      traefik.http.middlewares.mjml-auth.basicAuth.users: '${HTTP_PASSWORD}'
+      traefik.http.middlewares.mjml-auth.basicauth.removeheader: true
+      traefik.http.middlewares.mjml-auth.basicauth.users: '${HTTP_PASSWORD}'
     healthcheck:
       test: ["CMD", "wget", "-qO-", "http://localhost:3000/health"]
     restart: on-failure:5
