--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "dist/index.js",
   "scripts": {
     "format": "prettier --write src/*.js",
-    "lint": "eslint --fix src/",
-    "prebuild": "npm run format && npm run lint",
+    "style": "eslint --fix src/",
+    "prebuild": "npm run format && npm run style",
     "build": "babel src --out-dir dist",
     "start": "babel-node src/index.js"
   },
