--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "repository": "https://github.com/ViBiOh/mjml-api",
   "main": "dist/index.js",
   "scripts": {
+    "init": "curl -q -sSL --max-time 10 'https://raw.githubusercontent.com/ViBiOh/scripts/master/bootstrap' | bash -s 'git_hooks'",
     "format": "prettier --write src/*.js",
     "style": "eslint --fix src/",
     "prebuild": "npm run format && npm run style",
