--- a/infra/service.yml
+++ b/infra/service.yml
@@ -3,6 +3,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mjml
+  labels:
+    app.kubernetes.io/name: mjml
+    app.kubernetes.io/instance: mjml
+    app.kubernetes.io/managed-by: kubectl
 spec:
   selector:
     name: mjml
