--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "dependencies": {
     "body-parser": "1.19.0",
     "express": "4.17.1",
+    "express-prom-bundle": "6.1.0",
     "jaeger-client": "3.18.1",
     "mjml": "4.6.3",
+    "prom-client": "12.0.0",
     "yargs": "15.4.1"
   },
   "devDependencies": {
