ci: Adding configuration for prometheus scrapping

--- a/infra/deployment.yml
+++ b/infra/deployment.yml
@@ -15,6 +15,10 @@ spec:
     metadata:
       labels:
         name: mjml
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/scheme: http
+        prometheus.io/port: "3000"
     spec:
       containers:
         - name: funds
