ci: Adding configuration for prometheus scrapping

--- a/infra/deployment.yml
+++ b/infra/deployment.yml
@@ -16,9 +16,9 @@ spec:
       labels:
         name: mjml
       annotations:
-        prometheus.io/scrape: "true"
+        prometheus.io/scrape: 'true'
         prometheus.io/scheme: http
-        prometheus.io/port: "3000"
+        prometheus.io/port: '3000'
     spec:
       containers:
         - name: funds
