--- a/infra/config.yaml
+++ b/infra/config.yaml
@@ -1,9 +1,27 @@
 ---
-nameOverride: mjml
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
+kind: HelmRelease
+metadata:
+  name: mjml
+  namespace: default
+spec:
+  interval: 10m
+  chart:
+    spec:
+      chart: app
+      version: '0.0.20'
+      sourceRef:
+        kind: HelmRepository
+        name: vibioh
+        namespace: flux-system
+      interval: 10m
 
-podAnnotations:
+  values:
+    nameOverride: mjml
 
-image:
-  repository: vibioh/mjml
+    podAnnotations:
 
-port: 3000
+    image:
+      repository: vibioh/mjml
+
+    port: 3000
