--- a/infra/config.yaml
+++ b/infra/config.yaml
@@ -5,16 +5,16 @@ metadata:
   name: mjml
   namespace: default
 spec:
-  interval: 10m
+  interval: 120m
   chart:
     spec:
       chart: app
-      version: '0.0.20'
+      version: "0.0.20"
       sourceRef:
         kind: HelmRepository
         name: vibioh
         namespace: flux-system
-      interval: 10m
+      interval: 120m
 
   values:
     nameOverride: mjml
