--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
     branches:
       - main
 env:
-  SCRIPTS_NO_INTERACTIVE: "true"
+  SCRIPTS_NO_INTERACTIVE: 'true'
 defaults:
   run:
     shell: bash
@@ -20,7 +20,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2-beta
         with:
-          node-version: "15"
+          node-version: '15'
+      - run: |
+          npm install --ignore-scripts --global npm@7
       - run: |
           make
           git --no-pager diff && git diff --quiet
