--- a/infra/config.yaml
+++ b/infra/config.yaml
@@ -8,7 +8,7 @@ spec:
   chart:
     spec:
       chart: app
-      version: '0.0.43'
+      version: '0.0.46'
       sourceRef:
         kind: HelmRepository
         name: vibioh
@@ -20,6 +20,8 @@ spec:
     image:
       repository: vibioh/mjml:202102152201 # {"$imagepolicy": "default:mjml-api"}
     port: 3000
+    prometheus:
+      port: 3000
     resources:
       limits:
         memory: 128Mi
