--- a/infra/config.yaml
+++ b/infra/config.yaml
@@ -8,7 +8,7 @@ spec:
   chart:
     spec:
       chart: app
-      version: "0.0.47"
+      version: '0.0.47'
       sourceRef:
         kind: HelmRepository
         name: vibioh
@@ -16,6 +16,7 @@ spec:
       interval: 120m
   install:
     skipCRDs: true
+  maxHistory: 3
   upgrade:
     remediation:
       retries: 3
