--- a/infra/config.yaml
+++ b/infra/config.yaml
@@ -8,7 +8,7 @@ spec:
   chart:
     spec:
       chart: app
-      version: '0.0.47'
+      version: '0.0.48'
       sourceRef:
         kind: HelmRepository
         name: vibioh
@@ -26,7 +26,8 @@ spec:
     nameOverride: mjml
     podAnnotations:
     image:
-      repository: vibioh/mjml:202103020805 # {"$imagepolicy": "default:flux-mjml-api"}
+      name: vibioh/mjml
+      tag: 202103020805 # {"$imagepolicy": "default:flux-mjml-api:tag"}
     port: 3000
     prometheus:
       port: 3000
