--- a/infra/config.yaml
+++ b/infra/config.yaml
@@ -8,7 +8,7 @@ spec:
   chart:
     spec:
       chart: app
-      version: '0.0.48'
+      version: "0.0.48"
       sourceRef:
         kind: HelmRepository
         name: vibioh
@@ -27,7 +27,7 @@ spec:
     podAnnotations:
     image:
       name: vibioh/mjml
-      tag: 202103020805 # {"$imagepolicy": "default:flux-mjml-api:tag"}
+      tag: "202103020805" # {"$imagepolicy": "default:flux-mjml-api:tag"}
     port: 3000
     prometheus:
       port: 3000
