--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,6 @@
+---
 name: Build
+
 on:
   push:
     branches:
@@ -6,11 +8,14 @@ on:
   pull_request:
     branches:
       - main
+
 env:
   SCRIPTS_NO_INTERACTIVE: 'true'
+
 defaults:
   run:
     shell: bash
+
 jobs:
   build:
     name: Javascript
@@ -29,14 +34,23 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Login to DockerHub
+        if: env.DOCKER_USER && env.DOCKER_PASS
+        env:
+          DOCKER_USER: ${{ secrets.DOCKER_USER }}
+          DOCKER_PASS: ${{ secrets.DOCKER_PASS }}
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PASS }}
       - name: Docker
+        if: env.DOCKER_USER && env.DOCKER_PASS
+        env:
+          DOCKER_USER: ${{ secrets.DOCKER_USER }}
+          DOCKER_PASS: ${{ secrets.DOCKER_PASS }}
         run: |
           curl --disable --silent --show-error --location --max-time 30 "https://raw.githubusercontent.com/ViBiOh/scripts/main/bootstrap" | bash -s "release"
           DOCKER_IMAGE="${{ secrets.DOCKER_USER }}/$(make name)" IMAGE_VERSION="$(make version)" ./scripts/release docker
+
   publish:
     name: Publish
     if:
