--- a/.github/workflows/codeql-analysis.yaml
+++ b/.github/workflows/codeql-analysis.yaml
@@ -1,4 +1,6 @@
-name: "CodeQL"
+---
+name: CodeQL
+
 on:
   push:
     branches:
@@ -7,7 +9,8 @@ on:
     branches:
       - main
   schedule:
-    - cron: "0 0 * * 6"
+    - cron: '0 0 * * 6'
+
 jobs:
   analyze:
     name: Analyze
@@ -16,16 +19,16 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # Supported options are ['csharp', 'cpp', 'go', 'java', 'javascript', 'python']
-        language: ["javascript"]
+        language:
+          - javascript
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v2
-      - name: Initialize CodeQL
+      - name: Setup CodeQL
         uses: github/codeql-action/init@v1
         with:
           languages: ${{ matrix.language }}
       - name: Autobuild
         run: make init build
-      - name: Perform CodeQL Analysis
+      - name: CodeQL
         uses: github/codeql-action/analyze@v1
