--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -1,10 +1,18 @@
 version: 2
 updates:
-- package-ecosystem: npm
-  directory: /
-  schedule:
-    interval: weekly
-    day: sunday
-  commit-message:
-    prefix: chore
-    include: scope
+  - package-ecosystem: npm
+    directory: /
+    schedule:
+      interval: weekly
+      day: sunday
+    commit-message:
+      prefix: chore
+      include: scope
+  - package-ecosystem: docker
+    directory: /
+    schedule:
+      interval: weekly
+      day: sunday
+    commit-message:
+      prefix: chore
+      include: scope
