--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,7 +10,7 @@ on:
       - main
 
 env:
-  SCRIPTS_NO_INTERACTIVE: "true"
+  SCRIPTS_NO_INTERACTIVE: 'true'
 
 defaults:
   run:
@@ -25,9 +25,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Setup NodeJS
-        uses: actions/setup-node@v2-beta
+        uses: actions/setup-node@v2
         with:
-          node-version: "15"
+          node-version: '16'
       - run: |
           npm install --ignore-scripts --global npm@7
       - name: Build
