--- a/infra/api.yaml
+++ b/infra/api.yaml
@@ -26,7 +26,7 @@ spec:
     podAnnotations:
     image:
       name: vibioh/mjml
-      tag: "202105161820" # {"$imagepolicy": "default:flux-mjml-api:tag"}
+      tag: '202105161820' # {"$imagepolicy": "default:flux-mjml-api:tag"}
     port: 3000
     prometheus:
       port: 3000
@@ -38,3 +38,5 @@ spec:
       requests:
         cpu: 200m
         memory: 128Mi
+    podDisruption:
+      enabled: false
