--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/node": "7.14.5",
     "@babel/preset-env": "7.14.5",
     "@babel/register": "7.14.5",
+    "@babel/runtime": "7.14.5",
     "babel-eslint": "10.1.0",
     "eslint": "7.28.0",
     "eslint-config-airbnb-base": "14.2.1",
