--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -4,6 +4,7 @@ updates:
     directory: /
     schedule:
       interval: weekly
+    time: "06:00"
       day: sunday
     commit-message:
       prefix: chore
@@ -12,6 +13,7 @@ updates:
     directory: /
     schedule:
       interval: weekly
+    time: "06:00"
       day: sunday
     commit-message:
       prefix: chore
