ci: [skip ci] Changing scheduled hour for dependabot
Signed-off-by: Vincent Boutour <bob@vibioh.fr>

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -4,7 +4,7 @@ updates:
     directory: /
     schedule:
       interval: weekly
-    time: "06:00"
+      time: '06:00'
       day: sunday
     commit-message:
       prefix: chore
@@ -13,7 +13,7 @@ updates:
     directory: /
     schedule:
       interval: weekly
-    time: "06:00"
+      time: '06:00'
       day: sunday
     commit-message:
       prefix: chore
