--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "ViBiOh",
   "license": "ISC",
   "dependencies": {
+    "@opentelemetry/api": "1.0.4",
     "@opentelemetry/auto-instrumentations-node": "0.27.3",
     "@opentelemetry/core": "1.0.1",
     "@opentelemetry/exporter-jaeger": "1.0.1",
