--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -1,10 +1,17 @@
 version: 2
 updates:
+  - package-ecosystem: github-actions
+    directory: /
+    schedule:
+      interval: daily
+    commit-message:
+      prefix: ci
+      include: scope
   - package-ecosystem: npm
     directory: /
     schedule:
       interval: daily
-      time: '06:00'
+      time: "06:00"
     commit-message:
       prefix: chore
       include: scope
@@ -12,7 +19,7 @@ updates:
     directory: /
     schedule:
       interval: weekly
-      time: '06:00'
+      time: "06:00"
       day: sunday
     commit-message:
       prefix: chore
