ci: Fixing formatting in ci
Signed-off-by: Vincent Boutour <bob@vibioh.fr>

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -11,7 +11,7 @@ updates:
     directory: /
     schedule:
       interval: daily
-      time: "06:00"
+      time: '06:00'
     commit-message:
       prefix: chore
       include: scope
@@ -19,7 +19,7 @@ updates:
     directory: /
     schedule:
       interval: weekly
-      time: "06:00"
+      time: '06:00'
       day: sunday
     commit-message:
       prefix: chore
