--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "format": "./node_modules/prettier/bin/prettier.cjs --write \"src/**/*.js\"",
     "style": "./node_modules/eslint/bin/eslint.js --fix \"src/**/*.js\"",
     "build": "./node_modules/@babel/cli/bin/babel.js src --out-dir dist",
-    "start": "./node_modules/@babel/node/bin/babel-node.js src/index.js"
+    "start": "./node_modules/@babel/node/bin/babel-node.js --require ./src/telemetry.js src/index.js"
   },
   "keywords": [
     "mjml",
@@ -19,6 +19,12 @@
   "author": "ViBiOh",
   "license": "ISC",
   "dependencies": {
+    "@opentelemetry/api": "1.4.1",
+    "@opentelemetry/auto-instrumentations-node": "0.39.0",
+    "@opentelemetry/exporter-metrics-otlp-proto": "0.41.2",
+    "@opentelemetry/exporter-trace-otlp-proto": "0.41.2",
+    "@opentelemetry/sdk-metrics": "1.15.2",
+    "@opentelemetry/sdk-node": "0.41.2",
     "body-parser": "1.20.2",
     "express": "4.18.2",
     "express-prom-bundle": "6.6.0",
