feat(otel): Instrumenting only http
Signed-off-by: Vincent Boutour <bob@vibioh.fr>

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "format": "./node_modules/prettier/bin/prettier.cjs --write \"src/**/*.js\"",
     "style": "./node_modules/eslint/bin/eslint.js --fix \"src/**/*.js\"",
     "build": "./node_modules/@babel/cli/bin/babel.js src --out-dir dist",
-    "start": "./node_modules/@babel/node/bin/babel-node.js --require ./src/telemetry.js src/index.js"
+    "start": "OTEL_ENDPOINT_URL=localhost:4317 ./node_modules/@babel/node/bin/babel-node.js --require ./src/telemetry.js src/index.js"
   },
   "keywords": [
     "mjml",
@@ -20,11 +20,11 @@
   "license": "ISC",
   "dependencies": {
     "@opentelemetry/api": "1.4.1",
-    "@opentelemetry/auto-instrumentations-node": "0.39.1",
     "@opentelemetry/exporter-metrics-otlp-grpc": "0.41.2",
     "@opentelemetry/exporter-metrics-otlp-proto": "0.41.2",
     "@opentelemetry/exporter-trace-otlp-grpc": "0.41.2",
     "@opentelemetry/exporter-trace-otlp-proto": "0.41.2",
+    "@opentelemetry/instrumentation-http": "0.41.2",
     "@opentelemetry/resources": "1.15.2",
     "@opentelemetry/sdk-metrics": "1.15.2",
     "@opentelemetry/sdk-node": "0.41.2",
