chore(deps): Grouping opentelemetry
Signed-off-by: Vincent Boutour <bob@vibioh.fr>

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -20,9 +20,7 @@ updates:
     groups:
       opentelemetry:
         patterns:
-          - '@opentelemetry/exporter-*'
-          - '@opentelemetry/instrumentation-*'
-          - '@opentelemetry/sdk-node'
+          - '@opentelemetry/*'
       babel:
         patterns:
           - '@babel/*'
